build: 更新依赖并添加新项目
- 更新多个依赖包至最新版本
- 添加新项目 cli_app
- 新增多个依赖包以支持 cli_app
- 修改 Cargo.toml 添加工作区配置

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "hello_main"
 version = "0.1.0"
 edition = "2024"
 
+[workspace]
+resolver = "2"
+
+members=[
+ "cli_app"
+ ]
+
+
 [dependencies]
 anyhow = "1.0.95"
 axum = "0.8.1"
