feat(cli_app): 添加配置文件支持并重构项目
- 在 Cargo.toml 中添加 config、dotenv 和 serde 依赖
- 新增 settings 模块用于处理配置文件
- 重构 main 函数，支持配置文件参数
- 更新 serve 命令，添加端口参数
- 删除 src 目录下的 settings 相关代码

--- a/cli_app/Cargo.toml
+++ b/cli_app/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.95"
 clap = "4.5.24"
+config = "0.15.4"
+dotenv = "0.15.0"
+serde ={version= "1.0.217",features=["derive"]}
