feat(cli_app): 添加 HTTP 服务器功能
- 在项目中集成 axum 和 tokio 依赖
- 实现基本的 HTTP 服务器功能
- 添加 serve 命令配置和处理逻辑
- 优化项目结构和代码格式

--- a/cli_app/Cargo.toml
+++ b/cli_app/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.95"
+axum = "0.8.1"
 clap = "4.5.24"
 config = "0.15.4"
 dotenv = "0.15.0"
 serde ={version= "1.0.217",features=["derive"]}
+tokio = {version="1.42.0",features=["full"]}
