--- a/cli_app/Cargo.toml
+++ b/cli_app/Cargo.toml
@@ -12,3 +12,7 @@ config = "0.15.4"
 dotenv = "0.15.0"
 serde ={version= "1.0.217",features=["derive"]}
 tokio = {version="1.42.0",features=["full"]}
+tracing={version="0.1.41",features=["log"]}
+tracing-log = {version="0.2"}
+tracing-subscriber = {version="0.3.19",features=["registry","env-filter"]}
+tower-http = {version="0.6.2",features=["trace"]}
