--- a/cli_app/Cargo.toml
+++ b/cli_app/Cargo.toml
@@ -17,3 +17,4 @@ tracing-log = {version="0.2"}
 tracing-subscriber = {version="0.3.19",features=["registry","env-filter"]}
 tower-http = {version="0.6.2",features=["trace"]}
 chrono ={version="0.4.30",features=["serde"]}
+jsonwebtoken = "9.3.0"
