--- a/cli_app/Cargo.toml
+++ b/cli_app/Cargo.toml
@@ -18,3 +18,4 @@ tracing-subscriber = {version="0.3.19",features=["registry","env-filter"]}
 tower-http = {version="0.6.2",features=["trace"]}
 chrono ={version="0.4.30",features=["serde"]}
 jsonwebtoken = "9.3.0"
+argon2 = "0.5.3"
