--- a/cli_app/Cargo.toml
+++ b/cli_app/Cargo.toml
@@ -18,4 +18,6 @@ tracing-subscriber = {version="0.3.19",features=["registry","env-filter"]}
 tower-http = {version="0.6.2",features=["trace"]}
 chrono ={version="0.4.30",features=["serde"]}
 jsonwebtoken = "9.3.0"
-argon2 = "0.5.3"
+argon2 = {version="0.5.3"}
+tower = "0.5.2"
+rand = "0.8.5"
