--- a/cli_app/Cargo.toml
+++ b/cli_app/Cargo.toml
@@ -21,3 +21,4 @@ jsonwebtoken = "9.3.0"
 argon2 = {version="0.5.3"}
 tower = "0.5.2"
 rand = "0.8.5"
+sqlx = {version="0.8.3",features=["runtime-tokio","postgres","chrono","tls-rustls","macros"]}
