feat(cli_app): 添加 OpenAPI 文档并集成 Swagger UI
- 在 handlers 中添加 utoipa 注解以生成 OpenAPI 文档
- 在 api 模块中添加 SwaggerUI 集成
- 更新 Cargo.toml 以包含必要的依赖
- 重构部分代码以符合 OpenAPI 要求

--- a/cli_app/Cargo.toml
+++ b/cli_app/Cargo.toml
@@ -22,3 +22,6 @@ argon2 = {version="0.5.3"}
 tower = "0.5.2"
 rand = "0.8.5"
 sqlx = {version="0.8.3",features=["runtime-tokio","postgres","chrono","tls-rustls","macros"]}
+schemars = "0.8.21"
+utoipa = { version = "5.3.1", features = ["chrono"] }
+utoipa-swagger-ui = { version = "8.1.1", features = ["axum"] }
