--- a/cli_app/Cargo.toml
+++ b/cli_app/Cargo.toml
@@ -25,3 +25,7 @@ sqlx = {version="0.8.3",features=["runtime-tokio","postgres","chrono","tls-rustl
 schemars = "0.8.21"
 utoipa = { version = "5.3.1", features = ["chrono"] }
 utoipa-swagger-ui = { version = "8.1.1", features = ["axum"] }
+opentelemetry = { version = "0.27.1", features = ["metrics", "logs"] }
+opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio", "logs"] }
+opentelemetry-otlp = { version = "0.27.0", features = ["tonic", "http-json", "metrics", "logs", "reqwest-client", "reqwest-rustls"] }
+tracing-opentelemetry = "0.28.0"
